--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -21,4 +21,10 @@
         <servlet-name>LoginServlet</servlet-name>
         <url-pattern>/LoginServlet</url-pattern>
     </servlet-mapping>
+    <resource-ref>
+        <description>This is a MySQL database connection</description>
+        <res-ref-name>jdbc/ntest</res-ref-name>
+        <res-type>javax.sql.DataSource</res-type>
+        <res-auth>Container</res-auth>
+    </resource-ref>
 </web-app>
