add dashboard page and add bootstrap to index.jsp

--- a/pom.xml
+++ b/pom.xml
@@ -225,7 +225,7 @@
                         </goals>
                         <inherited>false</inherited>
                         <configuration>
-                            <includeArtifactIds>javassist</includeArtifactIds>
+                            <includeArtifactIds>jstl</includeArtifactIds>
                             <outputDirectory>web/web-inf/lib</outputDirectory>
                         </configuration>
                     </execution>
